feat: add flex theme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="" />
+  <meta name="robots" content="" />
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
@@ -17,16 +17,16 @@
           href="/theme/pygments/github.min.css">
 
 
+
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
-    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Test Atom">
 
 
+  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Test Atom">
 
-  
 
 
  
@@ -44,51 +44,57 @@
 
   <title>Test &ndash; Welcome to My Site</title>
 
+
 </head>
 <body class="light-theme">
-  <aside>
-    <div>
-      <a href="/">
-        <img src="/theme/img/profile.png" alt="Michael O'Keefe" title="Michael O'Keefe">
-      </a>
 
-      <h1>
-        <a href="/">Michael O'Keefe</a>
-      </h1>
+<aside>
+  <div>
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
+    </a>
 
-<p>Data scientist</p>
-
-      <nav>
-        <ul class="list">
+    <h1>
+      <a href="/"></a>
+    </h1>
 
 
-              <li>
-                <a target="_self"
-                   href="/#home">
-                  Welcome to My Site
-                </a>
-              </li>
-              <li>
-                <a target="_self"
-                   href="/pages/projects.html#projects">
-                  Projects
-                </a>
-              </li>
-              <li>
-                <a target="_self"
-                   href="/pages/about.html#about">
-                  About
-                </a>
-              </li>
 
-        </ul>
-      </nav>
+    <nav>
+      <ul class="list">
 
-      <ul class="social">
+
+            <li>
+              <a target="_self"
+                 href="/pages/about.html#about">
+                About
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/#home">
+                Welcome to My Site
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/notes.html#notes">
+                Notes
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/projects.html#projects">
+                Projects
+              </a>
+            </li>
+
       </ul>
-    </div>
+    </nav>
 
-  </aside>
+  </div>
+
+</aside>
   <main>
 
 
@@ -102,14 +108,11 @@
 <p>This is my home page.</p>  </div>
 </article>
 
-    <footer>
+<footer>
 <p>&copy;  </p>
 <p>
-</p>    </footer>
-  </main>
-
-
-
+Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
+</p></footer>  </main>
 
 <script type="application/ld+json">
 {
@@ -121,6 +124,5 @@
   "description": ""
 }
 </script>
-
 </body>
 </html>
