--- a/pages/notes.html
+++ b/pages/notes.html
@@ -42,7 +42,7 @@
 
 
 
-  <title>Test &ndash; Projects</title>
+  <title>Test &ndash; Notes</title>
 
 
 </head>
@@ -101,10 +101,10 @@
 <article class="single">
   <header>
     
-    <h1 id="projects">Projects</h1>
+    <h1 id="notes">Notes</h1>
   </header>
   <div>
-<p>This is where you can put projects.</p>  </div>
+<p>Just a collection of notes...ss</p>  </div>
 </article>
 
 <footer>
