feat: try adding page heirarchies

--- a/archives.html
+++ b/archives.html
@@ -70,20 +70,32 @@
             </li>
             <li>
               <a target="_self"
-                 href="/pages/projects.html#projects">
+                 href="/projects/#projects">
                 Projects
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
+                 href="/about/#about">
                 About
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/notes.html#notes">
+                 href="/notes/#notes">
                 Notes
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/tech_p1/#tech_p1">
+                Tech
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/tech_p2/#tech_p2">
+                Tech
               </a>
             </li>
 
