--- a/tech_p1/index.html
+++ b/tech_p1/index.html
@@ -42,7 +42,7 @@
 
 
 
-  <title>Test &ndash; Projects</title>
+  <title>Test &ndash; Tech</title>
 
 
 </head>
@@ -72,20 +72,32 @@
             </li>
             <li>
               <a target="_self"
-                 href="/pages/projects.html#projects">
+                 href="/projects/#projects">
                 Projects
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
+                 href="/about/#about">
                 About
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/notes.html#notes">
+                 href="/notes/#notes">
                 Notes
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/tech_p1/#tech_p1">
+                Tech
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/tech_p2/#tech_p2">
+                Tech
               </a>
             </li>
 
@@ -101,10 +113,10 @@
 <article class="single">
   <header>
     
-    <h1 id="projects">Projects</h1>
+    <h1 id="tech_p1">Tech</h1>
   </header>
   <div>
-<p>This is where you can put projects.</p>  </div>
+<h2>Introduction</h2>  </div>
 </article>
 
 <footer>
