--- a/tech_p2/index.html
+++ b/tech_p2/index.html
@@ -40,7 +40,9 @@
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=""/>
 
-  <title>Test &ndash; Categories</title>
+
+
+  <title>Test &ndash; Tech</title>
 
 
 </head>
@@ -110,12 +112,11 @@
 
 <article class="single">
   <header>
-    <h1 id="categories">Categories</h1>
+    
+    <h1 id="tech_p2">Tech</h1>
   </header>
   <div>
-    <ul class="list">
-    </ul>
-  </div>
+<h2>Introduction blah</h2>  </div>
 </article>
 
 <footer>
