--- a/notes/index.html
+++ b/notes/index.html
@@ -40,7 +40,9 @@
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=""/>
 
-  <title>Test &ndash; Categories</title>
+
+
+  <title>Test &ndash; Notes</title>
 
 
 </head>
@@ -110,12 +112,11 @@
 
 <article class="single">
   <header>
-    <h1 id="categories">Categories</h1>
+    
+    <h1 id="notes">Notes</h1>
   </header>
   <div>
-    <ul class="list">
-    </ul>
-  </div>
+<p>Just a collection of notes...</p>  </div>
 </article>
 
 <footer>
