try nested folder again

--- a/pages/tech_p2.html
+++ b/pages/tech_p2.html
@@ -66,37 +66,37 @@
 
             <li>
               <a target="_self"
+                 href="/pages/about.html#about">
+                About
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/example.html#example">
+                Tech
+              </a>
+            </li>
+            <li>
+              <a target="_self"
                  href="/#home">
                 Welcome to My Site
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/projects/#projects">
-                Projects
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/about/#about">
-                About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/notes/#notes">
+                 href="/pages/notes.html#notes">
                 Notes
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/tech_p1/#tech_p1">
-                Tech
+                 href="/pages/projects.html#projects">
+                Projects
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/tech_p2/#tech_p2">
+                 href="/pages/tech_p2.html#tech_p2">
                 Tech
               </a>
             </li>
@@ -116,7 +116,8 @@
     <h1 id="tech_p2">Tech</h1>
   </header>
   <div>
-<h2>Introduction blah</h2>  </div>
+<h2>Introduction blah</h2>
+<p>GaLORE</p>  </div>
 </article>
 
 <footer>
