--- a/pages/example.html
+++ b/pages/example.html
@@ -42,7 +42,7 @@
 
 
 
-  <title>Test &ndash; About</title>
+  <title>Test &ndash; Tech</title>
 
 
 </head>
@@ -66,37 +66,37 @@
 
             <li>
               <a target="_self"
+                 href="/pages/about.html#about">
+                About
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/example.html#example">
+                Tech
+              </a>
+            </li>
+            <li>
+              <a target="_self"
                  href="/#home">
                 Welcome to My Site
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/projects/#projects">
-                Projects
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/about/#about">
-                About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/notes/#notes">
+                 href="/pages/notes.html#notes">
                 Notes
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/tech_p1/#tech_p1">
-                Tech
+                 href="/pages/projects.html#projects">
+                Projects
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/tech_p2/#tech_p2">
+                 href="/pages/tech_p2.html#tech_p2">
                 Tech
               </a>
             </li>
@@ -113,12 +113,11 @@
 <article class="single">
   <header>
     
-    <h1 id="about">About</h1>
+    <h1 id="example">Tech</h1>
   </header>
   <div>
-<p><img alt="test" src="/images/lhc.jpg"></p>
-<p>Testing pelican config. </p>
-<p>Add another line to test.</p>  </div>
+<h2>Introduction</h2>
+<p>PEFt</p>  </div>
 </article>
 
 <footer>
