--- a/pages/projects.html
+++ b/pages/projects.html
@@ -42,7 +42,7 @@
 
 
 
-  <title>Test &ndash; Tech</title>
+  <title>Test &ndash; Projects</title>
 
 
 </head>
@@ -66,37 +66,37 @@
 
             <li>
               <a target="_self"
+                 href="/pages/about.html#about">
+                About
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/example.html#example">
+                Tech
+              </a>
+            </li>
+            <li>
+              <a target="_self"
                  href="/#home">
                 Welcome to My Site
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/projects/#projects">
-                Projects
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/about/#about">
-                About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/notes/#notes">
+                 href="/pages/notes.html#notes">
                 Notes
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/tech_p1/#tech_p1">
-                Tech
+                 href="/pages/projects.html#projects">
+                Projects
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/tech_p2/#tech_p2">
+                 href="/pages/tech_p2.html#tech_p2">
                 Tech
               </a>
             </li>
@@ -113,10 +113,10 @@
 <article class="single">
   <header>
     
-    <h1 id="tech_p1">Tech</h1>
+    <h1 id="projects">Projects</h1>
   </header>
   <div>
-<h2>Introduction</h2>  </div>
+<p>This is where you can put projects.</p>  </div>
 </article>
 
 <footer>
