try nested folder again

--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
 
 
 
-  <title>Test &ndash; Notes</title>
+  <title>Test &ndash; About</title>
 
 
 </head>
@@ -66,14 +66,8 @@
 
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
+                 href="/about/#about">
                 About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/example.html#example">
-                Tech
               </a>
             </li>
             <li>
@@ -84,19 +78,25 @@
             </li>
             <li>
               <a target="_self"
-                 href="/pages/notes.html#notes">
+                 href="/notes/#notes">
                 Notes
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/projects.html#projects">
+                 href="/projects/#projects">
                 Projects
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/tech_p2.html#tech_p2">
+                 href="/tech/p1/#tech/p1">
+                Tech
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/tech/p2/#tech/p2">
                 Tech
               </a>
             </li>
@@ -113,10 +113,12 @@
 <article class="single">
   <header>
     
-    <h1 id="notes">Notes</h1>
+    <h1 id="about">About</h1>
   </header>
   <div>
-<p>Just a collection of notes...</p>  </div>
+<p><img alt="test" src="/images/lhc.jpg"></p>
+<p>Testing pelican config. </p>
+<p>Add another line to test.</p>  </div>
 </article>
 
 <footer>
