--- a/index.html
+++ b/index.html
@@ -66,14 +66,8 @@
 
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
+                 href="/about/#about">
                 About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/example.html#example">
-                Tech
               </a>
             </li>
             <li>
@@ -84,19 +78,25 @@
             </li>
             <li>
               <a target="_self"
-                 href="/pages/notes.html#notes">
+                 href="/notes/#notes">
                 Notes
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/projects.html#projects">
+                 href="/projects/#projects">
                 Projects
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/tech_p2.html#tech_p2">
+                 href="/tech/p1/#tech/p1">
+                Tech
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/tech/p2/#tech/p2">
                 Tech
               </a>
             </li>
