--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=""/>
 
-
-
-  <title>Test &ndash; Welcome to My Site</title>
+  <title>Test</title>
 
 
 </head>
@@ -60,49 +58,6 @@
 
 
 
-    <nav>
-      <ul class="list">
-
-
-            <li>
-              <a target="_self"
-                 href="/about/#about">
-                About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/#home">
-                Welcome to My Site
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/notes/#notes">
-                Notes
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/projects/#projects">
-                Projects
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/tech/p1/#tech/p1">
-                Tech
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/tech/p2/#tech/p2">
-                Tech
-              </a>
-            </li>
-
-      </ul>
-    </nav>
 
   </div>
 
@@ -110,15 +65,11 @@
   <main>
 
 
-<article class="single">
-  <header>
-    
-    <h1 id="home">Welcome to My Site</h1>
-  </header>
-  <div>
-<p>Thank you for visiting. Welcome!</p>
-<p>This is my home page.</p>  </div>
-</article>
+
+
+
+
+
 
 <footer>
 <p>&copy;  </p>
