--- a/pages/peft.html
+++ b/pages/peft.html
@@ -40,7 +40,9 @@
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=""/>
 
-  <title>Test &ndash; Category tech</title>
+
+
+  <title>Test &ndash; PEFT</title>
 
 
 </head>
@@ -64,8 +66,32 @@
 
             <li>
               <a target="_self"
+                 href="/pages/about.html#about">
+                About
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/galore.html#galore">
+                GaLore
+              </a>
+            </li>
+            <li>
+              <a target="_self"
                  href="/#home">
                 Welcome to My Site
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/notes.html#notes">
+                Notes
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/peft.html#peft">
+                PEFT
               </a>
             </li>
             <li>
@@ -76,14 +102,8 @@
             </li>
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
-                About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/notes.html#notes">
-                Notes
+                 href="/pages/tech.html#tech">
+                Tech
               </a>
             </li>
 
@@ -96,40 +116,15 @@
   <main>
 
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="/galore.html#galore">GaLore</a></h2>
-    <p>
-      Posted on Wed 26 June 2024 in <a href="/category/tech.html">tech</a>
-
-
-    </p>
+    
+    <h1 id="peft">PEFT</h1>
   </header>
   <div>
-      <div><h2>Introduction blah</h2>
-<p>GaLORE</p></div>
-  </div>
-  <hr />
+<h2>Introduction</h2>
+<p>PEFt</p>  </div>
 </article>
-<article>
-  <header>
-    <h2><a href="/peft.html#peft">PEFT</a></h2>
-    <p>
-      Posted on Wed 26 June 2024 in <a href="/category/tech.html">tech</a>
-
-
-    </p>
-  </header>
-  <div>
-      <div><h2>Introduction</h2>
-<p>PEFt</p></div>
-  </div>
-</article>
-
-
-
 
 <footer>
 <p>&copy;  </p>
