--- a/pages/tech.html
+++ b/pages/tech.html
@@ -31,24 +31,18 @@
 
  
 
-<meta name="author" content="mwokeefe" />
-<meta name="description" content="Introduction blah GaLORE" />
-<meta name="keywords" content="">
-
-
+    <meta name="author" content="mwokeefe" />
+    <meta name="description" content="" />
   <meta property="og:site_name" content="Test"/>
-  <meta property="og:title" content="GaLore"/>
-  <meta property="og:description" content="Introduction blah GaLORE"/>
+  <meta property="og:type" content="blog"/>
+  <meta property="og:title" content="Test"/>
+  <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="/galore.html"/>
-  <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-06-26 00:00:00+00:00"/>
-  <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="/author/mwokeefe.html">
-  <meta property="article:section" content="tech"/>
-  <meta property="og:image" content="">
+  <meta property="og:url" content=""/>
 
-  <title>Test &ndash; GaLore</title>
+
+
+  <title>Test &ndash; Tech</title>
 
 
 </head>
@@ -72,8 +66,32 @@
 
             <li>
               <a target="_self"
+                 href="/pages/about.html#about">
+                About
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/galore.html#galore">
+                GaLore
+              </a>
+            </li>
+            <li>
+              <a target="_self"
                  href="/#home">
                 Welcome to My Site
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/notes.html#notes">
+                Notes
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/peft.html#peft">
+                PEFT
               </a>
             </li>
             <li>
@@ -84,14 +102,8 @@
             </li>
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
-                About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/notes.html#notes">
-                Notes
+                 href="/pages/tech.html#tech">
+                Tech
               </a>
             </li>
 
@@ -106,29 +118,12 @@
 
 <article class="single">
   <header>
-      
-    <h1 id="galore">GaLore</h1>
-    <p>
-      Posted on Wed 26 June 2024 in <a href="/category/tech.html">tech</a>
-
-    </p>
+    
+    <h1 id="tech">Tech</h1>
   </header>
-
-
   <div>
-    <h2>Introduction blah</h2>
-<p>GaLORE</p>
-  </div>
-  <div class="tag-cloud">
-    <p>
-    </p>
-  </div>
-
-
-
-
-
-
+<p><a href="/pages/peft.html">article 1</a>
+<a href="/pages/galore.html">article 2</a></p>  </div>
 </article>
 
 <footer>
