--- a/tags.html
+++ b/tags.html
@@ -64,8 +64,32 @@
 
             <li>
               <a target="_self"
+                 href="/pages/about.html#about">
+                About
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/galore.html#galore">
+                GaLore
+              </a>
+            </li>
+            <li>
+              <a target="_self"
                  href="/#home">
                 Welcome to My Site
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/notes.html#notes">
+                Notes
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/peft.html#peft">
+                PEFT
               </a>
             </li>
             <li>
@@ -76,14 +100,8 @@
             </li>
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
-                About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/notes.html#notes">
-                Notes
+                 href="/pages/tech.html#tech">
+                Tech
               </a>
             </li>
 
