--- a/galore.html
+++ b/galore.html
@@ -31,18 +31,24 @@
 
  
 
-    <meta name="author" content="mwokeefe" />
-    <meta name="description" content="" />
+<meta name="author" content="mwokeefe" />
+<meta name="description" content="Introduction blah GaLORE" />
+<meta name="keywords" content="">
+
+
   <meta property="og:site_name" content="Test"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="Test"/>
-  <meta property="og:description" content=""/>
+  <meta property="og:title" content="GaLore"/>
+  <meta property="og:description" content="Introduction blah GaLORE"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+  <meta property="og:url" content="/galore.html"/>
+  <meta property="og:type" content="article"/>
+  <meta property="article:published_time" content="2024-06-26 00:00:00+00:00"/>
+  <meta property="article:modified_time" content=""/>
+  <meta property="article:author" content="/author/mwokeefe.html">
+  <meta property="article:section" content="tech"/>
+  <meta property="og:image" content="">
 
-
-
-  <title>Test &ndash; PEFT</title>
+  <title>Test &ndash; GaLore</title>
 
 
 </head>
@@ -66,38 +72,26 @@
 
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
-                About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/galore.html#galore">
-                GaLore
-              </a>
-            </li>
-            <li>
-              <a target="_self"
                  href="/#home">
                 Welcome to My Site
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/notes.html#notes">
-                Notes
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/peft.html#peft">
-                PEFT
-              </a>
-            </li>
-            <li>
-              <a target="_self"
                  href="/pages/projects.html#projects">
                 Projects
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/about.html#about">
+                About
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/notes.html#notes">
+                Notes
               </a>
             </li>
             <li>
@@ -118,12 +112,29 @@
 
 <article class="single">
   <header>
-    
-    <h1 id="peft">PEFT</h1>
+      
+    <h1 id="galore">GaLore</h1>
+    <p>
+      Posted on Wed 26 June 2024 in <a href="/category/tech.html">tech</a>
+
+    </p>
   </header>
+
+
   <div>
-<h2>Introduction</h2>
-<p>PEFt</p>  </div>
+    <h2>Introduction blah</h2>
+<p>GaLORE</p>
+  </div>
+  <div class="tag-cloud">
+    <p>
+    </p>
+  </div>
+
+
+
+
+
+
 </article>
 
 <footer>
