--- a/archives.html
+++ b/archives.html
@@ -64,38 +64,26 @@
 
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
-                About
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/galore.html#galore">
-                GaLore
-              </a>
-            </li>
-            <li>
-              <a target="_self"
                  href="/#home">
                 Welcome to My Site
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/notes.html#notes">
-                Notes
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/peft.html#peft">
-                PEFT
-              </a>
-            </li>
-            <li>
-              <a target="_self"
                  href="/pages/projects.html#projects">
                 Projects
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/about.html#about">
+                About
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="/pages/notes.html#notes">
+                Notes
               </a>
             </li>
             <li>
@@ -121,6 +109,21 @@
   <div>
     <dl>
 
+          <dt>Wed 26 June 2024</dt>
+
+        <dd>
+          <a href="/galore.html">GaLore</a>
+        </dd>
+          <dt>Wed 26 June 2024</dt>
+
+        <dd>
+          <a href="/peft.html">PEFT</a>
+        </dd>
+          <dt>Wed 26 June 2024</dt>
+
+        <dd>
+          <a href="/python-libraries.html">Python libraries</a>
+        </dd>
     </dl>
   </div>
 </article>
