--- a/peft.html
+++ b/peft.html
@@ -31,16 +31,24 @@
 
  
 
-    <meta name="author" content="mwokeefe" />
-    <meta name="description" content="" />
-  <meta property="og:site_name" content="Test"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="Test"/>
-  <meta property="og:description" content=""/>
-  <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+<meta name="author" content="mwokeefe" />
+<meta name="description" content="Introduction PEFt" />
+<meta name="keywords" content="">
 
-  <title>Test &ndash; Categories</title>
+
+  <meta property="og:site_name" content="Test"/>
+  <meta property="og:title" content="PEFT"/>
+  <meta property="og:description" content="Introduction PEFt"/>
+  <meta property="og:locale" content="en_US"/>
+  <meta property="og:url" content="/peft.html"/>
+  <meta property="og:type" content="article"/>
+  <meta property="article:published_time" content="2024-06-26 00:00:00+00:00"/>
+  <meta property="article:modified_time" content=""/>
+  <meta property="article:author" content="/author/mwokeefe.html">
+  <meta property="article:section" content="tech"/>
+  <meta property="og:image" content="">
+
+  <title>Test &ndash; PEFT</title>
 
 
 </head>
@@ -104,15 +112,29 @@
 
 <article class="single">
   <header>
-    <h1 id="categories">Categories</h1>
+      
+    <h1 id="peft">PEFT</h1>
+    <p>
+      Posted on Wed 26 June 2024 in <a href="/category/tech.html">tech</a>
+
+    </p>
   </header>
+
+
   <div>
-    <ul class="list">
-      <li>
-        <a href="/category/tech.html">tech</a> (3)
-      </li>
-    </ul>
+    <h2>Introduction</h2>
+<p>PEFt</p>
   </div>
+  <div class="tag-cloud">
+    <p>
+    </p>
+  </div>
+
+
+
+
+
+
 </article>
 
 <footer>
