--- a/python-libraries.html
+++ b/python-libraries.html
@@ -31,16 +31,24 @@
 
  
 
-    <meta name="author" content="mwokeefe" />
-    <meta name="description" content="" />
-  <meta property="og:site_name" content="Test"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="Test"/>
-  <meta property="og:description" content=""/>
-  <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+<meta name="author" content="mwokeefe" />
+<meta name="description" content="Library Notes PDM PEP compliant package manager" />
+<meta name="keywords" content="">
 
-  <title>Test &ndash; Categories</title>
+
+  <meta property="og:site_name" content="Test"/>
+  <meta property="og:title" content="Python libraries"/>
+  <meta property="og:description" content="Library Notes PDM PEP compliant package manager"/>
+  <meta property="og:locale" content="en_US"/>
+  <meta property="og:url" content="/python-libraries.html"/>
+  <meta property="og:type" content="article"/>
+  <meta property="article:published_time" content="2024-06-26 00:00:00+00:00"/>
+  <meta property="article:modified_time" content=""/>
+  <meta property="article:author" content="/author/mwokeefe.html">
+  <meta property="article:section" content="tech"/>
+  <meta property="og:image" content="">
+
+  <title>Test &ndash; Python libraries</title>
 
 
 </head>
@@ -104,15 +112,41 @@
 
 <article class="single">
   <header>
-    <h1 id="categories">Categories</h1>
+      
+    <h1 id="python-libraries">Python libraries</h1>
+    <p>
+      Posted on Wed 26 June 2024 in <a href="/category/tech.html">tech</a>
+
+    </p>
   </header>
+
+
   <div>
-    <ul class="list">
-      <li>
-        <a href="/category/tech.html">tech</a> (3)
-      </li>
-    </ul>
+    <table>
+<thead>
+<tr>
+<th style="text-align: center;"><strong>Library</strong></th>
+<th style="text-align: center;"><strong>Notes</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: center;"><a href="https://github.com/pdm-project/pdm">PDM</a></td>
+<td style="text-align: center;">PEP compliant package manager</td>
+</tr>
+</tbody>
+</table>
   </div>
+  <div class="tag-cloud">
+    <p>
+    </p>
+  </div>
+
+
+
+
+
+
 </article>
 
 <footer>
