--- a/archives.html
+++ b/archives.html
@@ -112,6 +112,11 @@
           <dt>Wed 26 June 2024</dt>
 
         <dd>
+          <a href="/dpo.html">DPO</a>
+        </dd>
+          <dt>Wed 26 June 2024</dt>
+
+        <dd>
           <a href="/galore.html">GaLore</a>
         </dd>
           <dt>Wed 26 June 2024</dt>
