--- a/categories.html
+++ b/categories.html
@@ -109,6 +109,9 @@
   <div>
     <ul class="list">
       <li>
+        <a href="/category/papers.html">papers</a> (1)
+      </li>
+      <li>
         <a href="/category/tech.html">tech</a> (3)
       </li>
     </ul>
