--- a/dpo.html
+++ b/dpo.html
@@ -31,16 +31,24 @@
 
  
 
-    <meta name="author" content="mwokeefe" />
-    <meta name="description" content="" />
-  <meta property="og:site_name" content="Test"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="Test"/>
-  <meta property="og:description" content=""/>
-  <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+<meta name="author" content="mwokeefe" />
+<meta name="description" content="Introduction Direct Preference Optimization (DPO) is..." />
+<meta name="keywords" content="">
 
-  <title>Test &ndash; Posts by mwokeefe:</title>
+
+  <meta property="og:site_name" content="Test"/>
+  <meta property="og:title" content="DPO"/>
+  <meta property="og:description" content="Introduction Direct Preference Optimization (DPO) is..."/>
+  <meta property="og:locale" content="en_US"/>
+  <meta property="og:url" content="/dpo.html"/>
+  <meta property="og:type" content="article"/>
+  <meta property="article:published_time" content="2024-06-26 00:00:00+00:00"/>
+  <meta property="article:modified_time" content=""/>
+  <meta property="article:author" content="/author/mwokeefe.html">
+  <meta property="article:section" content="papers"/>
+  <meta property="og:image" content="">
+
+  <title>Test &ndash; DPO</title>
 
 
 </head>
@@ -102,82 +110,32 @@
   <main>
 
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="/dpo.html#dpo">DPO</a></h2>
+      
+    <h1 id="dpo">DPO</h1>
     <p>
       Posted on Wed 26 June 2024 in <a href="/category/papers.html">papers</a>
 
-
     </p>
   </header>
+
+
   <div>
-      <div><h2>Introduction</h2>
-<p><a href="https://arxiv.org/abs/2305.18290">Direct Preference Optimization (DPO)</a> is...</p></div>
+    <h2>Introduction</h2>
+<p><a href="https://arxiv.org/abs/2305.18290">Direct Preference Optimization (DPO)</a> is...</p>
   </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="/galore.html#galore">GaLore</a></h2>
+  <div class="tag-cloud">
     <p>
-      Posted on Wed 26 June 2024 in <a href="/category/tech.html">tech</a>
-
-
     </p>
-  </header>
-  <div>
-      <div><h2>Introduction blah</h2>
-<p>GaLORE</p></div>
   </div>
-  <hr />
+
+
+
+
+
+
 </article>
-<article>
-  <header>
-    <h2><a href="/peft.html#peft">PEFT</a></h2>
-    <p>
-      Posted on Wed 26 June 2024 in <a href="/category/tech.html">tech</a>
-
-
-    </p>
-  </header>
-  <div>
-      <div><h2>Introduction</h2>
-<p>PEFt</p></div>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="/python-libraries.html#python-libraries">Python libraries</a></h2>
-    <p>
-      Posted on Wed 26 June 2024 in <a href="/category/tech.html">tech</a>
-
-
-    </p>
-  </header>
-  <div>
-      <div><table>
-<thead>
-<tr>
-<th style="text-align: center;"><strong>Library</strong></th>
-<th style="text-align: center;"><strong>Notes</strong></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align: center;"><a href="https://github.com/pdm-project/pdm">PDM</a></td>
-<td style="text-align: center;">PEP compliant package manager</td>
-</tr>
-</tbody>
-</table></div>
-  </div>
-</article>
-
-
-
 
 <footer>
 <p>&copy;  </p>
