--- a/pages/tech.html
+++ b/pages/tech.html
@@ -118,7 +118,7 @@
   <div>
 <h1>Introduction</h1>
 <p>This page contains links to paper...</p>
-<p><a href="{filename}../papers/dpo.md">Direct Preference Optimization (DPO)</a></p>  </div>
+<p><a href="/dpo.html">Direct Preference Optimization (DPO)</a></p>  </div>
 </article>
 
 <footer>
