feat: start adding projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -110,7 +110,11 @@
     <h1 id="projects">Projects</h1>
   </header>
   <div>
-<p>This is where you can put projects.</p>  </div>
+<p>This is where you can put projects.</p>
+<h1>2021</h1>
+<p><a href="{filename}../projects/zcounting.md">Z-counting</a></p>
+<h1>2025</h1>
+<p><a href="{filename}../projects/cllm.md">CLLM</a></p>  </div>
 </article>
 
 <footer>
