--- a/pages/tech.html
+++ b/pages/tech.html
@@ -110,7 +110,37 @@
     <h1 id="tech">Tech</h1>
   </header>
   <div>
-<p><a href="/python-libraries.html">Python stack</a></p>  </div>
+<h1>Python libraries</h1>
+<p>These are the libraries that I am currently using:</p>
+<table>
+<thead>
+<tr>
+<th style="text-align: center;"><strong>Thing</strong></th>
+<th style="text-align: center;"><strong>Library</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: center;">Environment manager</td>
+<td style="text-align: center;"><a href="https://github.com/astral-sh/uv">uv</a></td>
+</tr>
+</tbody>
+</table>
+<p>These are some other libraries which I have used in the past but have since swapped out for </p>
+<table>
+<thead>
+<tr>
+<th style="text-align: center;"><strong>Thing</strong></th>
+<th style="text-align: center;"><strong>Library</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: center;">Environment manager</td>
+<td style="text-align: center;"><a href="https://github.com/pdm-project/pdm">PDM</a></td>
+</tr>
+</tbody>
+</table>  </div>
 </article>
 
 <footer>
