fix: try fixing zcounting path

--- a/categories.html
+++ b/categories.html
@@ -111,6 +111,9 @@
       <li>
         <a href="/category/papers.html">papers</a> (3)
       </li>
+      <li>
+        <a href="/category/projects.html">projects</a> (2)
+      </li>
     </ul>
   </div>
 </article>
