--- a/archives.html
+++ b/archives.html
@@ -124,6 +124,16 @@
         <dd>
           <a href="/mamba.html">Mamba</a>
         </dd>
+          <dt>Wed 01 January 2020</dt>
+
+        <dd>
+          <a href="/luminosity-monitoring.html">Luminosity monitoring...</a>
+        </dd>
+          <dt>Wed 01 January 2020</dt>
+
+        <dd>
+          <a href="/precise-length-control-for-large-language-models.html">Precise length control for large language models</a>
+        </dd>
     </dl>
   </div>
 </article>
