--- a/luminosity-monitoring.html
+++ b/luminosity-monitoring.html
@@ -31,16 +31,24 @@
 
  
 
-    <meta name="author" content="mwokeefe" />
-    <meta name="description" content="" />
-  <meta property="og:site_name" content="Test"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="Test"/>
-  <meta property="og:description" content=""/>
-  <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+<meta name="author" content="mwokeefe" />
+<meta name="description" content="Introduction Blah" />
+<meta name="keywords" content="">
 
-  <title>Test &ndash; Posts by mwokeefe:</title>
+
+  <meta property="og:site_name" content="Test"/>
+  <meta property="og:title" content="Luminosity monitoring..."/>
+  <meta property="og:description" content="Introduction Blah"/>
+  <meta property="og:locale" content="en_US"/>
+  <meta property="og:url" content="/luminosity-monitoring.html"/>
+  <meta property="og:type" content="article"/>
+  <meta property="article:published_time" content="2020-01-01 00:00:00+00:00"/>
+  <meta property="article:modified_time" content=""/>
+  <meta property="article:author" content="/author/mwokeefe.html">
+  <meta property="article:section" content="projects"/>
+  <meta property="og:image" content="">
+
+  <title>Test &ndash; Luminosity monitoring...</title>
 
 
 </head>
@@ -102,85 +110,32 @@
   <main>
 
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="/dpo.html#dpo">DPO</a></h2>
-    <p>
-      Posted on Wed 26 June 2024 in <a href="/category/papers.html">papers</a>
-
-
-    </p>
-  </header>
-  <div>
-      <div><h2>Introduction</h2>
-<p><a href="https://arxiv.org/abs/2305.18290">Direct Preference Optimization (DPO)</a> is...</p></div>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="/galore.html#galore">GaLore</a></h2>
-    <p>
-      Posted on Wed 26 June 2024 in <a href="/category/papers.html">papers</a>
-
-
-    </p>
-  </header>
-  <div>
-      <div><p><a href="https://arxiv.org/abs/2403.03507">GaLore</a> is</p></div>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="/luminosity-monitoring.html#luminosity-monitoring">Luminosity monitoring...</a></h2>
+      
+    <h1 id="luminosity-monitoring">Luminosity monitoring...</h1>
     <p>
       Posted on Wed 01 January 2020 in <a href="/category/projects.html">projects</a>
 
-
     </p>
   </header>
+
+
   <div>
-      <div><h2>Introduction</h2>
-<p>Blah</p></div>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="/mamba.html#mamba">Mamba</a></h2>
-    <p>
-      Posted on Wed 26 June 2024 in <a href="/category/papers.html">papers</a>
-
-
-    </p>
-  </header>
-  <div>
-      <div><p><a href="https://arxiv.org/abs/2312.00752">Mambda</a> is...</p></div>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="/precise-length-control-for-large-language-models.html#precise-length-control-for-large-language-models">Precise length control for large language models</a></h2>
-    <p>
-      Posted on Wed 01 January 2020 in <a href="/category/projects.html">projects</a>
-
-
-    </p>
-  </header>
-  <div>
-      <div><h2>Introduction</h2>
+    <h2>Introduction</h2>
 <p>Blah</p>
-<h1>Citing articles</h1>
-<p>Add...</p></div>
   </div>
+  <div class="tag-cloud">
+    <p>
+    </p>
+  </div>
+
+
+
+
+
+
 </article>
-
-
-
 
 <footer>
 <p>&copy;  </p>
