fix: try fixing zcounting path

--- a/archives.html
+++ b/archives.html
@@ -127,12 +127,12 @@
           <dt>Wed 01 January 2020</dt>
 
         <dd>
-          <a href="/luminosity-monitoring.html">Luminosity monitoring...</a>
+          <a href="/precise-length-control-for-large-language-models.html">Precise length control for large language models</a>
         </dd>
           <dt>Wed 01 January 2020</dt>
 
         <dd>
-          <a href="/precise-length-control-for-large-language-models.html">Precise length control for large language models</a>
+          <a href="/zcounting.html">Zcounting</a>
         </dd>
     </dl>
   </div>
