--- a/pages/projects.html
+++ b/pages/projects.html
@@ -112,7 +112,7 @@
   <div>
 <p>This is where you can put projects.</p>
 <h1>2021</h1>
-<p><a href="/luminosity-monitoring.html">Z-counting</a></p>
+<p><a href="/zcounting.html">Z-counting</a></p>
 <h1>2025</h1>
 <p><a href="/precise-length-control-for-large-language-models.html">CLLM</a></p>  </div>
 </article>
