--- a/zcounting.html
+++ b/zcounting.html
@@ -37,10 +37,10 @@
 
 
   <meta property="og:site_name" content="Test"/>
-  <meta property="og:title" content="Luminosity monitoring..."/>
+  <meta property="og:title" content="Zcounting"/>
   <meta property="og:description" content="Introduction Blah"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="/luminosity-monitoring.html"/>
+  <meta property="og:url" content="/zcounting.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2020-01-01 00:00:00+00:00"/>
   <meta property="article:modified_time" content=""/>
@@ -48,7 +48,7 @@
   <meta property="article:section" content="projects"/>
   <meta property="og:image" content="">
 
-  <title>Test &ndash; Luminosity monitoring...</title>
+  <title>Test &ndash; Zcounting</title>
 
 
 </head>
@@ -113,7 +113,7 @@
 <article class="single">
   <header>
       
-    <h1 id="luminosity-monitoring">Luminosity monitoring...</h1>
+    <h1 id="zcounting">Zcounting</h1>
     <p>
       Posted on Wed 01 January 2020 in <a href="/category/projects.html">projects</a>
 
