feat: add start of Zcounting work

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -110,9 +110,12 @@
     <h1 id="projects">Projects</h1>
   </header>
   <div>
-<p>This is where you can put projects.</p>
+<p>A selection of projects that I have contributed to.</p>
 <h1>2021</h1>
-<p><a href="/zcounting.html">Z-counting</a></p>
+<p>The <a href="/zcounting.html">Z-counting method</a> is a novel method for measuring instantaneous luminosity in proton–proton collisions using reconstructed Zll decays.
+By counting electron and muon pairs from Z bosons and applying data-driven corrections,
+the approach achieves 2–4% precision over short timescales and shows excellent agreement with the standard ATLAS luminosity measurements.
+This technique offers a reliable, independent cross-check for ATLAS luminosity monitoring.</p>
 <h1>2025</h1>
 <p><a href="/precise-length-control-for-large-language-models.html">CLLM</a></p>  </div>
 </article>
