--- a/zcounting.html
+++ b/zcounting.html
@@ -32,17 +32,17 @@
  
 
 <meta name="author" content="mwokeefe" />
-<meta name="description" content="Introduction Blah" />
+<meta name="description" content="Introduction This paper" />
 <meta name="keywords" content="">
 
 
   <meta property="og:site_name" content="Test"/>
   <meta property="og:title" content="Zcounting"/>
-  <meta property="og:description" content="Introduction Blah"/>
+  <meta property="og:description" content="Introduction This paper"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="/zcounting.html"/>
   <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2020-01-01 00:00:00+00:00"/>
+  <meta property="article:published_time" content="2021-02-23 00:00:00+00:00"/>
   <meta property="article:modified_time" content=""/>
   <meta property="article:author" content="/author/mwokeefe.html">
   <meta property="article:section" content="projects"/>
@@ -115,7 +115,7 @@
       
     <h1 id="zcounting">Zcounting</h1>
     <p>
-      Posted on Wed 01 January 2020 in <a href="/category/projects.html">projects</a>
+      Posted on Tue 23 February 2021 in <a href="/category/projects.html">projects</a>
 
     </p>
   </header>
@@ -123,7 +123,7 @@
 
   <div>
     <h2>Introduction</h2>
-<p>Blah</p>
+<p>This <a href="https://cds.cern.ch/record/2752951/files/ATL-DAPR-PUB-2021-001.pdf">paper</a></p>
   </div>
   <div class="tag-cloud">
     <p>
