--- a/archives.html
+++ b/archives.html
@@ -127,7 +127,7 @@
           <dt>Tue 23 February 2021</dt>
 
         <dd>
-          <a href="/zcounting.html">Zcounting</a>
+          <a href="/monitoring-luminosity-at-the-lhc-using-z-boson.html">Monitoring luminosity at the LHC using Z boson</a>
         </dd>
           <dt>Wed 01 January 2020</dt>
 
