feat: add start of Zcounting work

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -110,7 +110,8 @@
     <h1 id="projects">Projects</h1>
   </header>
   <div>
-<p>A selection of projects that I have contributed to.</p>
+<p>A selection of projects that I have contributed to.
+Click the links to read the detailed blog posts.</p>
 <h1>2021</h1>
 <p>The <a href="/monitoring-luminosity-at-the-lhc-using-z-boson.html">Z-counting method</a> is a novel method for measuring instantaneous luminosity in proton–proton collisions using reconstructed Zll decays.
 By counting electron and muon pairs from Z bosons and applying data-driven corrections,
