--- a/monitoring-luminosity-at-the-lhc-using-the-z-boson.html
+++ b/monitoring-luminosity-at-the-lhc-using-the-z-boson.html
@@ -37,10 +37,10 @@
 
 
   <meta property="og:site_name" content="Test"/>
-  <meta property="og:title" content="Monitoring luminosity at the LHC using Z boson"/>
+  <meta property="og:title" content="Monitoring luminosity at the LHC using the Z boson"/>
   <meta property="og:description" content="Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the LHC, from …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="/monitoring-luminosity-at-the-lhc-using-z-boson.html"/>
+  <meta property="og:url" content="/monitoring-luminosity-at-the-lhc-using-the-z-boson.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2021-02-23 00:00:00+00:00"/>
   <meta property="article:modified_time" content=""/>
@@ -48,7 +48,7 @@
   <meta property="article:section" content="projects"/>
   <meta property="og:image" content="">
 
-  <title>Test &ndash; Monitoring luminosity at the LHC using Z boson</title>
+  <title>Test &ndash; Monitoring luminosity at the LHC using the Z boson</title>
 
 
 </head>
@@ -113,7 +113,7 @@
 <article class="single">
   <header>
       
-    <h1 id="monitoring-luminosity-at-the-lhc-using-z-boson">Monitoring luminosity at the LHC using Z boson</h1>
+    <h1 id="monitoring-luminosity-at-the-lhc-using-the-z-boson">Monitoring luminosity at the LHC using the Z boson</h1>
     <p>
       Posted on Tue 23 February 2021 in <a href="/category/projects.html">projects</a>
 
