--- a/pages/projects.html
+++ b/pages/projects.html
@@ -113,7 +113,7 @@
 <p>A selection of projects that I have contributed to.
 Click the links to read the detailed blog posts.</p>
 <h1>2021</h1>
-<p>The <a href="/monitoring-luminosity-at-the-lhc-using-z-boson.html">Z-counting method</a> is a novel method for measuring instantaneous luminosity in proton–proton collisions using reconstructed Zll decays.
+<p>The <a href="/monitoring-luminosity-at-the-lhc-using-the-z-boson.html">Z-counting method</a> is a novel method for measuring instantaneous luminosity in proton–proton collisions using reconstructed Z → ℓ⁺ℓ⁻  decays.
 By counting electron and muon pairs from Z bosons and applying data-driven corrections,
 the approach achieves 2–4% precision over short timescales and shows excellent agreement with the standard ATLAS luminosity measurements.
 This technique offers a reliable, independent cross-check for ATLAS luminosity monitoring.</p>
