feat: add more python libs and remove notes

--- a/pages/tech.html
+++ b/pages/tech.html
@@ -84,12 +84,6 @@
             </li>
             <li>
               <a target="_self"
-                 href="/pages/notes.html#notes">
-                Notes
-              </a>
-            </li>
-            <li>
-              <a target="_self"
                  href="/pages/papers.html#papers">
                 Papers
               </a>
@@ -121,8 +115,24 @@
 </thead>
 <tbody>
 <tr>
+<td style="text-align: center;">CLI</td>
+<td style="text-align: center;"><a href="https://github.com/google/python-fire">fire</a></td>
+</tr>
+<tr>
+<td style="text-align: center;">Data version control</td>
+<td style="text-align: center;"><a href="https://github.com/iterative/dvc">DVC</a></td>
+</tr>
+<tr>
+<td style="text-align: center;">Distributed computing</td>
+<td style="text-align: center;"><a href="https://github.com/ray-project/ray">Ray</a></td>
+</tr>
+<tr>
 <td style="text-align: center;">Environment manager</td>
 <td style="text-align: center;"><a href="https://github.com/astral-sh/uv">uv</a></td>
+</tr>
+<tr>
+<td style="text-align: center;">Experiment tracking</td>
+<td style="text-align: center;"><a href="https://github.com/mlflow/mlflow">MLFlow</a></td>
 </tr>
 </tbody>
 </table>
@@ -137,7 +147,7 @@
 <tbody>
 <tr>
 <td style="text-align: center;">Environment manager</td>
-<td style="text-align: center;"><a href="https://github.com/pdm-project/pdm">PDM</a></td>
+<td style="text-align: center;"><a href="https://github.com/pdm-project/pdm">PDM</a>, <a href="https://github.com/python-poetry/poetry">Poetry</a></td>
 </tr>
 </tbody>
 </table>  </div>
