feat: add CLLM draft to start

--- a/monitoring-luminosity-at-the-lhc-using-the-z-boson.html
+++ b/monitoring-luminosity-at-the-lhc-using-the-z-boson.html
@@ -32,13 +32,13 @@
  
 
 <meta name="author" content="mwokeefe" />
-<meta name="description" content="Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the LHC, from …" />
+<meta name="description" content=":blue_book: paper Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the …" />
 <meta name="keywords" content="">
 
 
   <meta property="og:site_name" content="Test"/>
   <meta property="og:title" content="Monitoring luminosity at the LHC using the Z boson"/>
-  <meta property="og:description" content="Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the LHC, from …"/>
+  <meta property="og:description" content=":blue_book: paper Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="/monitoring-luminosity-at-the-lhc-using-the-z-boson.html"/>
   <meta property="og:type" content="article"/>
@@ -116,7 +116,8 @@
 
 
   <div>
-    <h1>Introduction</h1>
+    <p>:blue_book: <a href="https://cds.cern.ch/record/2752951/files/ATL-DAPR-PUB-2021-001.pdf">paper</a></p>
+<h1>Introduction</h1>
 <p>When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in.</p>
 <p>During Run 2 of the LHC, from 2015 to 2018, the ATLAS experiment at CERN reached unprecedented levels of collision activity. But how do we know — with precision — how many collisions actually occurred? Traditionally, this has been the job of specialized detectors like LUCID. But as it turns out, the humble Z boson, a well-understood particle from the Standard Model, can also serve as a powerful tool to monitor luminosity.</p>
 <p>Let me walk you through how.</p>
@@ -138,7 +139,6 @@ Together, these methods give a clean, corrected rate of Z boson decays that can 
 <h1>Final Thoughts</h1>
 <p>Using physics itself to calibrate physics may sound meta, but it’s part of what makes experiments like ATLAS so powerful. The ability to use well-modeled processes like Z boson decays to monitor detector performance in real time adds a new layer of confidence to every analysis that follows.
 And as we head into higher luminosities and more complex data in Run 3 and beyond, having multiple, independent ways to validate our measurements isn’t just nice — it’s essential.</p>
-<p>If you would like to read more, the full details can be found in <a href="https://cds.cern.ch/record/2752951/files/ATL-DAPR-PUB-2021-001.pdf">this paper</a>.</p>
   </div>
   <div class="tag-cloud">
     <p>
