feat: add CLLM draft to start

--- a/monitoring-luminosity-at-the-lhc-using-the-z-boson.html
+++ b/monitoring-luminosity-at-the-lhc-using-the-z-boson.html
@@ -33,7 +33,7 @@
 
 <meta name="author" content="mwokeefe" />
 <meta name="description" content=":blue_book: paper Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the …" />
-<meta name="keywords" content="test">
+<meta name="keywords" content="">
 
 
   <meta property="og:site_name" content="Test"/>
@@ -46,7 +46,6 @@
   <meta property="article:modified_time" content=""/>
   <meta property="article:author" content="/author/mwokeefe.html">
   <meta property="article:section" content="projects"/>
-  <meta property="article:tag" content="test"/>
   <meta property="og:image" content="">
 
   <title>Test &ndash; Monitoring luminosity at the LHC using the Z boson</title>
@@ -143,7 +142,6 @@ And as we head into higher luminosities and more complex data in Run 3 and beyon
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/test.html">test</a>
     </p>
   </div>
 
