feat: add CLLM draft to start

--- a/monitoring-luminosity-at-the-lhc-using-the-z-boson.html
+++ b/monitoring-luminosity-at-the-lhc-using-the-z-boson.html
@@ -32,13 +32,13 @@
  
 
 <meta name="author" content="mwokeefe" />
-<meta name="description" content=":blue_book: paper Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the …" />
+<meta name="description" content="📘: paper Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the LHC …" />
 <meta name="keywords" content="">
 
 
   <meta property="og:site_name" content="Test"/>
   <meta property="og:title" content="Monitoring luminosity at the LHC using the Z boson"/>
-  <meta property="og:description" content=":blue_book: paper Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the …"/>
+  <meta property="og:description" content="📘: paper Introduction When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in. During Run 2 of the LHC …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="/monitoring-luminosity-at-the-lhc-using-the-z-boson.html"/>
   <meta property="og:type" content="article"/>
@@ -116,7 +116,7 @@
 
 
   <div>
-    <p>:blue_book: <a href="https://cds.cern.ch/record/2752951/files/ATL-DAPR-PUB-2021-001.pdf">paper</a></p>
+    <p>📘: <a href="https://cds.cern.ch/record/2752951/files/ATL-DAPR-PUB-2021-001.pdf">paper</a></p>
 <h1>Introduction</h1>
 <p>When you’re smashing protons together at nearly the speed of light inside the Large Hadron Collider (LHC), keeping track of how often those collisions happen — and under what conditions — is absolutely critical. That’s where the concept of luminosity comes in.</p>
 <p>During Run 2 of the LHC, from 2015 to 2018, the ATLAS experiment at CERN reached unprecedented levels of collision activity. But how do we know — with precision — how many collisions actually occurred? Traditionally, this has been the job of specialized detectors like LUCID. But as it turns out, the humble Z boson, a well-understood particle from the Standard Model, can also serve as a powerful tool to monitor luminosity.</p>
