--- a/precise-length-control-for-large-language-models.html
+++ b/precise-length-control-for-large-language-models.html
@@ -32,13 +32,13 @@
  
 
 <meta name="author" content="mwokeefe" />
-<meta name="description" content=":blue_book: paper Introduction Controlling output length in large language models (LLMs) is a persistent challenge, especially in production systems where structured responses or consistent verbosity are essential. Standard prompting techniques and maximum token limits offer only coarse control, often resulting in outputs that are too short, too long, or unnaturally …" />
+<meta name="description" content="📘: paper Introduction Controlling output length in large language models (LLMs) is a persistent challenge, especially in production systems where structured responses or consistent verbosity are essential. Standard prompting techniques and maximum token limits offer only coarse control, often resulting in outputs that are too short, too long, or unnaturally truncated …" />
 <meta name="keywords" content="">
 
 
   <meta property="og:site_name" content="Test"/>
   <meta property="og:title" content="Precise length control for large language models"/>
-  <meta property="og:description" content=":blue_book: paper Introduction Controlling output length in large language models (LLMs) is a persistent challenge, especially in production systems where structured responses or consistent verbosity are essential. Standard prompting techniques and maximum token limits offer only coarse control, often resulting in outputs that are too short, too long, or unnaturally …"/>
+  <meta property="og:description" content="📘: paper Introduction Controlling output length in large language models (LLMs) is a persistent challenge, especially in production systems where structured responses or consistent verbosity are essential. Standard prompting techniques and maximum token limits offer only coarse control, often resulting in outputs that are too short, too long, or unnaturally truncated …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="/precise-length-control-for-large-language-models.html"/>
   <meta property="og:type" content="article"/>
@@ -116,7 +116,7 @@
 
 
   <div>
-    <p>:blue_book: <a href="https://www.sciencedirect.com/science/article/pii/S2949719125000196">paper</a></p>
+    <p>📘: <a href="https://www.sciencedirect.com/science/article/pii/S2949719125000196">paper</a></p>
 <h1>Introduction</h1>
 <p>Controlling output length in large language models (LLMs) is a persistent challenge, especially in production systems where structured responses or consistent verbosity are essential. Standard prompting techniques and maximum token limits offer only coarse control, often resulting in outputs that are too short, too long, or unnaturally truncated.</p>
 <p>To address this, we introduce a simple but effective method to enable precise response length control in decoder-only transformer architectures using Length-Difference Positional Encoding (LDPE).</p>
